# mini-redis-rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  orchestrator.yaml  your_program.sh
.claude/: settings.local.json
.codecrafters/: run.sh
docs/: outline.md  prd.md
docs/bugs/architecture/: debug-stack-overflow-async-match.md  mutex-poisoning-cascade.md  parse-error-swallowed.md  process-exit-bypasses-cleanup.md  race-current-db.md  task-local-scope-missing.md
docs/plans/01-string/: plan.md
docs/plans/02-expiry/: plan.md
docs/plans/03-list/: plan.md
docs/plans/04-misc/: plan.md
docs/superpowers/plans/: 2026-05-09-orchestrator-implementation.md  (+3 more)
mini-redis/: Cargo.toml
mini-redis/src/: blocking.rs  cmd.rs  config.rs  db.rs  inline.rs  lib.rs  main.rs  persist.rs  registry.rs
mini-redis/src/cmd/: auth.rs  dispatch.rs  mod.rs  parse.rs  types.rs
mini-redis/src/cmd/handlers/: bitmap.rs  connection.rs  expiry.rs  geo.rs  hash.rs  hyperloglog.rs  key.rs  list.rs  mod.rs  scan.rs  set.rs  stream.rs  string.rs  zset.rs
mini-redis/src/cmd/parsers/: admin.rs  hashes.rs  lists.rs  mod.rs  sets.rs  streams.rs  strs.rs  zsets.rs
mini-redis/src/protocol/: mod.rs  resp.rs
mini-redis/src/server/: config.rs  mod.rs  pubsub.rs  registry.rs  shutdown.rs  waiters.rs
mini-redis/src/storage/: db.rs  mod.rs  persist.rs
mini-redis/tests/: cmd_test.rs  inline_test.rs  resp_test.rs
src/: cmd.rs  db.rs  inline.rs  lib.rs  main.rs  registry.rs  resp.rs
test-tools/: Cargo.toml
test-tools/src/: lib.rs
tests/: cmd_test.rs  inline_test.rs  resp_test.rs
(+28 files in other folders)
