[package]
name = "mini-redis"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2024"

[dependencies]
anyhow = "1.0.59"                                   # error handling
bytes = { version = "1.3.0", features = ["serde"] } # helps manage buffers
thiserror = "2.0.18"                                # error handling
serde = { version = "1", features = ["derive"] }
bincode = "1"
tokio = { version = "1.23.0", features = ["full"] } # async networking
